# RAIC2020

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.txt
runner/: aicup2020-preferences.json  all_quick_config.json  batch_test.py  vauto 15.bat  vlatest_sent.bat  vquick.bat
sources/: main.cpp
sources/brain/: brain.cpp  brain.h  building.cpp  building.h  building_queue.cpp  building_queue.h  fighting.cpp  fighting.h  production.cpp  production.h  routing.cpp  routing.h  state.cpp  state.h  utils-inl.h  utils.cpp  utils.h
sources/model/: Action.hpp  AttackAction.hpp  AttackProperties.hpp  AutoAttack.cpp  AutoAttack.hpp  BuildAction.cpp  BuildAction.hpp  BuildProperties.cpp  BuildProperties.hpp  Camera.hpp  ClientMessage.hpp  Color.hpp  ColoredVertex.hpp  DebugCommand.hpp  DebugData.hpp  DebugState.hpp  Entity.cpp  Entity.hpp  EntityAction.hpp  EntityProperties.hpp  EntityType.hpp  MoveAction.hpp  Player.hpp  PlayerView.cpp  PlayerView.hpp  PrimitiveType.hpp  RepairAction.hpp  RepairProperties.cpp  RepairProperties.hpp  ServerMessage.hpp  Vec2Float.hpp  Vec2Int.hpp
sources/strategy/: TcpStream.cpp
